# bonodoo

./: Makefile  setup.cfg  setup.py  tutorial.py
src/bonodoo/: odoo.py
tests/: test_bonodoo.py
